tests/NormalTests/paczka1/fuzzy1/72171478.err
Error in line 18: S790 S808 9,6
Error in line 12: ViVsX7qvl A252 53,3
